--- a/templates/host-add.html
+++ b/templates/host-add.html
@@ -124,7 +124,7 @@
             $.ajax({
                 dataType:'json',
                 type: 'POST',
-                url: 'http://127.0.0.1:5000/client/hadd',
+                url: '/client/hadd',
                 data: data,
 
                 success: function (data) {
