--- a/templates/host-list.html
+++ b/templates/host-list.html
@@ -93,7 +93,7 @@
                 infos: [
                     {status: '正在运行', id: '1', host_name: '123', port_num: '123', ip_address: '123', create_time: '123'},
                 ],
-                hosts:[],
+                hosts: [],
             },
             created: function () {
                 var csrf_token = "{{ csrf_token() }}";
@@ -114,9 +114,28 @@
 
                         success: function (data) {
                             _self.hosts = data.host_list;
-                            _self.hosts[0].status = 'qew';
-{#                            _self.status = _self.$el.attributes['run_status'];#}
-                            console.log(_self.hosts[0].status)
+                            $(_self.hosts).each(function (index) {
+                                var ip_address = this.ip_address;//ip地址
+                                var port_num = this.port_num;//端口号
+
+                                $.post({
+                                    url:'http://127.0.0.1:5000/client/daemonstatus',
+                                    data:{
+                                         'ip_address': ip_address,
+                                         'port_num' : port_num
+                                    },
+                                    success:function (data) {
+                                        if (data['code'==200]){
+                                            vm.$set(_self.hosts[index],'status','正在运行')
+                                        }else {
+                                            vm.$set(_self.hosts[index],'status','连接失败')
+                                        }
+                                    },
+                                    error: function () {
+                                            vm.$set(_self.hosts[index],'status','未连接')
+                                        }
+                                })
+                            });
                         },
                         error: function () {
                             console.log('error');
@@ -127,7 +146,7 @@
                 get_host_list();
                 setInterval(function () {
                     get_host_list();
-                }, 10000);
+                }, 30000);
             }
 
         })
