--- a/templates/host-list.html
+++ b/templates/host-list.html
@@ -11,7 +11,7 @@
 <div class="x-body">
   <xblock>
     <button class="layui-btn" onclick="x_admin_show('添加主机','./hadd')"><i class="layui-icon"></i>添加</button>
-    <span class="x-right" style="line-height:40px">爬虫服务器数量:88</span>
+    <span class="x-right" style="line-height:40px">爬虫服务器数量: {{ counts }}  </span>
   </xblock>
   <table class="layui-table" id="host_list">
     <thead>
@@ -151,49 +151,48 @@
 {#    </script>#}
 
 
-<script>
+    <script>
 
-    $(function () {
-        var csrf_token = "{{ csrf_token() }}";
+        $(function () {
+            var csrf_token = "{{ csrf_token() }}";
 
             $.ajaxSetup({
-                beforeSend: function(xhr, settings) {
+                beforeSend: function (xhr, settings) {
                     if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
                         xhr.setRequestHeader("X-CSRFToken", csrf_token);
                     }
                 }
             });
 
+            $("#host_list").find("tr").each(function () {
+                var tdArr = $(this).children('td');
+                var ip_address = tdArr.eq(3).text();//ip地址
+                var port_num = tdArr.eq(4).text();//端口号
 
-        $("#host_list").find("tr").each(function(){
-            var tdArr = $(this).children('td');
-            var ip_address = tdArr.eq(3).text();//ip地址
-            var port_num = tdArr.eq(4).text();//端口号
+                tdArr.children('span').eq(0).text('连接中...')
 
-            tdArr.children('span').eq(0).text('连接中...')
+                $.post({
+                    url: '/client/daemonstatus',
+                    data: {
+                        'ip_address': ip_address,
+                        'port_num': port_num
+                    },
+                    success: function (data) {
+                        if (data['code'] == 200) {
+                            tdArr.children('span').eq(0).text('正在运行');
+                        } else {
+                            tdArr.children('span').eq(0).text('连接失败');
+                        }
+                    },
+                    error: function () {
+                        tdArr.children('span').eq(0).text('未连接');
+                    }
+                });
 
-            $.post({
-                url:'http://127.0.0.1:5000/client/daemonstatus',
-                data:{
-                    'ip_address': ip_address,
-                    'port_num' : port_num
-                },
-                success:function (data) {
-                    if (data['code']==200){
-                           tdArr.children('span').eq(0).text('正在运行');
-                       }else {
-                           tdArr.children('span').eq(0).text('连接失败');
-                           }
-                        },
-                error: function () {
-                            tdArr.children('span').eq(0).text('未连接');
-                     }
+            });
         });
 
-    });
-    })
-
-</script>
+    </script>
 
 
 <script>
