--- a/templates/host-add.html
+++ b/templates/host-add.html
@@ -112,9 +112,9 @@
                     }
                 }
             });
-            host_name = data.field['host_name']
-            ip_address = data.field['ip_address']
-            port_num = data.field['port_num']
+            host_name = data.field['host_name'];
+            ip_address = data.field['ip_address'];
+            port_num = data.field['port_num'];
             data = {
                     'host_name':host_name,
                     'ip_address':ip_address,
