host_list编辑功能完成

--- a/templates/host-list.html
+++ b/templates/host-list.html
@@ -61,7 +61,7 @@
           <a onclick="member_stop(this,'10001')" href="javascript:;"  title="启用">
             <i class="layui-icon">&#xe601;</i>
           </a>
-          <a title="编辑"  onclick="x_admin_show('编辑','./hadd')" href="javascript:;">
+          <a title="编辑"  onclick="x_admin_show('编辑','./hupdate?id={{ host.id }}')" href="javascript:;">
             <i class="layui-icon">&#xe642;</i>
           </a>
           <a title="删除" onclick="member_del(this,{{ host.id }})" href="javascript:;">
