--- a/templates/host-list.html
+++ b/templates/host-list.html
@@ -58,9 +58,6 @@
         <td>{{ host.port_num }}</td>
         <td>{{ host.create_time }}</td>
         <td class="td-manage">
-          <a onclick="member_stop(this,'10001')" href="javascript:;"  title="启用">
-            <i class="layui-icon">&#xe601;</i>
-          </a>
           <a title="编辑"  onclick="x_admin_show('编辑','./hupdate?id={{ host.id }}')" href="javascript:;">
             <i class="layui-icon">&#xe642;</i>
           </a>
@@ -72,16 +69,16 @@
     {% endfor %}
     </tbody>
   </table>
-  <div class="page">
-    <div>
-      <a class="prev" href="">&lt;&lt;</a>
-      <a class="num" href="">1</a>
-      <span class="current">2</span>
-      <a class="num" href="">3</a>
-      <a class="num" href="">489</a>
-      <a class="next" href="">&gt;&gt;</a>
-    </div>
-  </div>
+{#  <div class="page">#}
+{#    <div>#}
+{#      <a class="prev" href="">&lt;&lt;</a>#}
+{#      <a class="num" href="">1</a>#}
+{#      <span class="current">2</span>#}
+{#      <a class="num" href="">3</a>#}
+{#      <a class="num" href="">489</a>#}
+{#      <a class="next" href="">&gt;&gt;</a>#}
+{#    </div>#}
+{#  </div>#}
 
 </div>
 
@@ -196,45 +193,7 @@
 
 
 <script>
-  layui.use('laydate', function(){
-    var laydate = layui.laydate;
-
-    //执行一个laydate实例
-    laydate.render({
-      elem: '#start' //指定元素
-    });
-
-    //执行一个laydate实例
-    laydate.render({
-      elem: '#end' //指定元素
-    });
-  });
-
-   /*用户-停用*/
-  function member_stop(obj,id){
-      layer.confirm('确认要停用吗？',function(index){
-
-          if($(obj).attr('title')=='启用'){
-
-            //发异步把用户状态进行更改
-            $(obj).attr('title','停用');
-            $(obj).find('i').html('&#xe62f;');
-
-            $(obj).parents("tr").find(".td-status").find('span').addClass('layui-btn-disabled').html('已停用');
-            layer.msg('已停用!',{icon: 5,time:1000});
-
-          }else{
-            $(obj).attr('title','启用')
-            $(obj).find('i').html('&#xe601;');
-
-            $(obj).parents("tr").find(".td-status").find('span').removeClass('layui-btn-disabled').html('已启用');
-            layer.msg('已启用!',{icon: 5,time:1000});
-          }
-
-      });
-  }
-
-  /*用户-删除*/
+  /*删除*/
   function member_del(obj,id){
       layer.confirm('确认要删除吗？',function(index){
           var csrf_token = "{{ csrf_token() }}";
