--- a/templates/upload-project.html
+++ b/templates/upload-project.html
@@ -21,7 +21,7 @@
                                                     class="layui-icon">&#xe67c;</i>打包文件
                                             </button>
                                             <div class="layui-upload-list">
-                                                <img class="layui-upload-img" id="egg_file_preview">
+                                                <img class="egg_file_preview" id="egg_file_preview">
                                                 <!-- <p id="demoText"></p>-->
                                             </div>
                                         </div>
@@ -56,16 +56,26 @@
 
         <script>
             layui.use('upload', function () {
+                var csrf_token = "{{ csrf_token() }}";
+
+            $.ajaxSetup({
+                beforeSend: function(xhr, settings) {
+                    if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
+                        xhr.setRequestHeader("X-CSRFToken", csrf_token);
+                    }
+                }
+            });
+
                 var upload = layui.upload;
 
                 //执行实例
                 var uploadInst = upload.render({
                     elem: '#egg_file' //绑定元素
-                    , url: '../app/upload/changeImg' //上传接口
+                    , url: './upload_project' //上传接口
 
                     , done: function (res) {
                         //上传完毕回调
-                        $('#egg_file_preview').attr('src', '../' + data.data);
+                        $('#egg_file_preview').attr('src', 'C:\\Users\\Administrator\\Desktop\\上传文件' + data.data);
                         layer.msg('上传成功！');
                     }
                     , error: function () {
